--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "dev": "concurrently \"npm run client:dev\" \"npm run server:dev\"",
         "install:client": "cd ./client && npm i",
         "install:server": "cd ./server && npm i",
+        "install:scraper": "cd ./scraper && npm i",
         "install": "concurrently \"npm run install:client\" \"npm run install:server\"",
         "scrape": "node ./scraper/index.js"
     },
