Install script now includes scraper

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "install:client": "cd ./client && npm i",
         "install:server": "cd ./server && npm i",
         "install:scraper": "cd ./scraper && npm i",
-        "install": "concurrently \"npm run install:client\" \"npm run install:server\"",
+        "install": "concurrently \"npm run install:client\" \"npm run install:server\" \"npm run install:scraper\"",
         "scrape": "node ./scraper/index.js"
     },
     "keywords": [],
