--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3333",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
