--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "install:server": "cd ./server && npm i",
         "install:scraper": "cd ./scraper && npm i",
         "install": "concurrently \"npm run install:client\" \"npm run install:server\" \"npm run install:scraper\"",
-        "scrape": "node ./scraper/index.js"
+        "scrape": "node ./server/scraper/index.js"
     },
     "keywords": [],
     "author": "",
